src/test/ui/error-codes/E0492.stderr
error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/E0492.rs:14:34
   |
14 | static B: &'static AtomicUsize = &A; //~ ERROR E0492
   |                                  ^^

error: aborting due to previous error

